--- a/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
+++ b/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
@@ -24,9 +24,9 @@
             <form id="formm" action="https://formspree.io/f/xpznrdqk" method="POST" class="formm">
                 <label for="servCat">Chagua aina ya marekebisho yako</label>
                 <select name="What to change" id="servCat">
-                    <option value="picture">Picha ibadilishwe</option>
-                    <option value="name">Jina libadilishwe</option>
-                    <option value="picture and name">Picha na jina vibadilishwe</option>
+                    <option value="Picture">Picha ibadilishwe</option>
+                    <option value="Name">Jina libadilishwe</option>
+                    <option value="Picture and Name">Picha na jina vibadilishwe</option>
                 </select>
                 <!-- <label for="servDesc">Andika jina lako kwa usahihi hapa</label> -->
                 <input type="text" name="The former name" id="formerNamee"
