--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@
             margin: 50px 10px 10px 10px;
             color: white;
             background-color: crimson;
+            cursor: pointer;
 
         }
 
