--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 Valuation | Warehouse Management
                 | Filing Tax Returns </p>
             <p onclick="document.getElementById('hireMeCta').click()"> <i class="icon fas fa-music"></i>
-                <span>Music</span>Learn Keyboard | Learn Accoustic Guitar | Learn
+                <span>Music</span>Learn Keyboard | Learn Acoustic Guitar | Learn
                 Bass
                 Guitar | Learn
                 Drums | Learn Music Production</p>
