--- a/galleryKakaJere/gallery_paliheca/concerns.html
+++ b/galleryKakaJere/gallery_paliheca/concerns.html
@@ -105,7 +105,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus24.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Health</h4>
@@ -117,7 +117,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus26.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Bible Study</h4>
@@ -129,7 +129,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus28.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Sports, Arts and Crafts</h4>
@@ -141,7 +141,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus29.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Curiosity</h4>
@@ -153,7 +153,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus31.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Hygiene</h4>
@@ -165,7 +165,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus38.png" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Teamwork</h4>
@@ -177,7 +177,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus33.webp" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Leadership</h4>
@@ -189,7 +189,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus34.jpeg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Self-management</h4>
@@ -201,7 +201,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/nus7.png" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Confidence</h4>
@@ -213,7 +213,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus40.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Care</h4>
@@ -225,7 +225,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/nus3.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Problem Solving</h4>
@@ -237,7 +237,7 @@
             </article>
             <article class="course">
                 <div class="course__image">
-                    <img src="images/0004.jpg" alt="">
+                    <img src="imagesPlc/added@13_10_2022/nus36.webp" alt="">
                 </div>
                 <div class="course__info">
                     <h4>Decision Making</h4>
