--- a/galleryKakaJere/gallery_paliheca/index.html
+++ b/galleryKakaJere/gallery_paliheca/index.html
@@ -179,7 +179,7 @@
                 <div class="course__info">
                     <h4>Nourishing Diets</h4>
                     <p>Following specialist's guide to children's meals and diet we feed our students with a well
-                        balanced diet and safe food as well as satisfactory food.
+                        balanced diet and safe as well as satisfactory food.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
