--- a/galleryKakaJere/gallery_paliheca/concerns.html
+++ b/galleryKakaJere/gallery_paliheca/concerns.html
@@ -98,7 +98,7 @@
                 <div class="course__info">
                     <h4>Nourishing Diets</h4>
                     <p>Following specialist's guide to children's meals and diet we feed our students with a well
-                        balanced diet and safe food as well as satisfactory food.
+                        balanced diet and safe as well as satisfactory food.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -109,8 +109,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Health</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>While at school, we strictly insure that a child is in good health and will have a special
+                        attention if there is any health concern that requires one.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -121,8 +121,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Bible Study</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We teach children the Word of God which is the only way of preparing them to make the most
+                        important decision of their lives—where they will spend eternity.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -133,8 +133,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Sports, Arts and Crafts</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We use sports not to build character but to reveal the hidden characters within children and
+                        strngthen their habits from there.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -145,8 +145,9 @@
                 </div>
                 <div class="course__info">
                     <h4>Curiosity</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>
+                        We open the minds of our students through various curiosity activities as quoted from Albert
+                        Einstein 'The mind that opens to a new idea never return to an original size'
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -157,8 +158,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Hygiene</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>Cleanliness as one of the basic etiquettes for well-being, we care about it starting from the
+                        basic cleanliness which is simple and effective for sound health routine among children.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -169,8 +170,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Teamwork</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>Through team works and team assignments, we teach children to work with others as well as
+                        help them to build trust with others.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -181,8 +182,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Leadership</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We teach children that they were not born only to fit in but purposely to stand out.We We lead
+                        them to become inspirational leaders.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -193,8 +194,9 @@
                 </div>
                 <div class="course__info">
                     <h4>Self-management</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We teach our students about becoming their own leader by training their mental, physical, social
+                        and intellectual faculties in different ways so that they may be able to make right choices by
+                        their own.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -205,8 +207,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Confidence</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We give children their inner voice that leads them to believe that they are braver than they
+                        believe, stronger than they seem, and smarter than they think.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -217,8 +219,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Care</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We fill our children with the spirit of charity by guiding them to believe that they can rise
+                        higher by helping other people, and that's the way thay can inspire the world with change.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -229,8 +231,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Problem Solving</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>We build problem solvers here by giving them some problems to solve according to their levels so
+                        as inspire their problem solving abilities.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
@@ -241,8 +243,8 @@
                 </div>
                 <div class="course__info">
                     <h4>Decision Making</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa non vero eum tempora, accusamus
-                        delectus eos.
+                    <p>Again as we know, children learn how to make good decisions by making decisions and not by
+                        following directions, we therefore provide them with a better room for them to make some.
                     </p>
                     <a href="concerns.html" class="btn btn-primary">Learn More</a>
                 </div>
